Revised tree construction and level order travels of tree